correcting overflow

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h4 {
 
 .emilyimage {
   padding: 60px;
-  margin: 20px;
+  margin: 20px, 0px, 20px, 20px;
 }
 
 .subtext {
